fix css resp reserv scrollbar... + hauteur recap

--- a/Kioxk/Client/Style/StyleSheet.scss
+++ b/Kioxk/Client/Style/StyleSheet.scss
@@ -10,6 +10,8 @@ body, html {
     font-family: 'Twinkle Star', cursive;
     background-image: url("/photo/papierinp.jpg");
     font-size: max(.8rem,1.2vw);
+
+ 
 }
 
 /*@media screen and (max-width:1000px) {
@@ -1309,7 +1311,7 @@ body, html {
         justify-content: center; // !! RESP !!
         align-items: center;
         @include ombre();
-        background-color: blue; //#00c6b0;
+        //  background-color: blue; //#00c6b0;
         flex-shrink: 0;
         //   flex-direction:column;
         > div:first-child { //cont p
@@ -1318,10 +1320,10 @@ body, html {
             height: 80%; //100%    ,16rem);
             /*min-height: auto;
             min-width: auto;*/
-            background-color: yellow;
+            // background-color: yellow;
             flex-shrink: 0;
             // opacity: .4;
-            //    overflow-y: auto;
+            //   overflow-y: hidden;
             //  overflow-x: hidden;
 
             #form {
@@ -1364,6 +1366,8 @@ body, html {
                     filter: drop-shadow(1px 2px 1px rgba(0,0,0,1));
                 }
 
+
+
                 > :first-child { // > EditForm { // EditForm
                     height: 100%;
                     font-size: 1rem; //1.2vw;
@@ -1373,8 +1377,23 @@ body, html {
                     //   background: linear-gradient(to right, #FF4B2B, #FF416C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
                     // background: rgb(11,11,11);
                     // background: linear-gradient(90deg, rgba(11,11,11,1) 0%, rgba(60,55,49,1) 35%, rgba(9,10,10,1) 100%);
-                    overflow-y: scroll;
+                    overflow-y: auto;
                     overflow-x: visible;
+
+
+
+                    &::-webkit-scrollbar {
+                        background-color: blue;
+                    }
+                    &::-webkit-scrollbar-thumb {
+                        background: red;
+                        border-radius: 8px;
+                        width: 8px;
+                    }
+                    /*  ::-webkit-scrollbar-track {
+                        background-color: red;
+                        width: 16px;
+                    }*/
 
                     label {
                         display: block;
@@ -1439,11 +1458,11 @@ body, html {
                 position: absolute;
                 top: 0; //100%; //0
                 // width: 100%;
-                height: 100%;
-                overflow-y: auto;
+                height: 1%;
+                overflow-y: auto; //hidden;//auto;
                 scroll-behavior: smooth;
                 border-radius: 10% / 5%;
-                background-color: orange;
+                background-color: peru;
                 // left: 0;
                 // transition: left 4s;
                 animation: transpaye 2s forwards;
@@ -1457,11 +1476,13 @@ body, html {
 
                     to {
                         width: 50%; //100%; //51%;
-                         left:50%;
+                        left: 50%;
                         // top: 0;
-                        height: 26rem; //100%; //26rem;
+                        height: 100%; //26rem; //100%; //26rem;
                     }
                 }
+
+
 
                 #mailcont {
                     position: relative;
